<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrivacyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageback"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="Term and Condition"
                android:textColor="@color/colorsplash"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight=".10"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left|center"
                            android:paddingTop="10dp"
                            android:text="Terms and Conditions"
                            android:textSize="12sp"
                            android:textStyle="bold"
                            app:fontFamily="@font/acme" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:text="@string/term"
                            android:textSize="12sp"
                            app:fontFamily="@font/acme" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:text="@string/privacy"
                            android:textSize="12sp"
                            app:fontFamily="@font/acme" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:text="@string/privacys"
                            android:textSize="12sp"
                            app:fontFamily="@font/acme" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:text="@string/terms"
                            android:textSize="12sp"
                            app:fontFamily="@font/acme" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="@string/termsss"
                            android:textSize="15sp"
                            app:fontFamily="@font/acme" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:text="@string/item"
                            android:textSize="16sp"
                            app:fontFamily="@font/acme" />


                    </LinearLayout>


                </ScrollView>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>