<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorsplash"
    android:orientation="vertical"
    tools:context=".MoneyWalletActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imgback"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/acme"
                android:paddingLeft="80dp"
                android:text="Money Wallet"
                android:textColor="@color/colorsplash"
                android:textSize="24sp" />

        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:text="Wallet Balance"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold"
            app:fontFamily="@font/almendra_display" />

        <TextView
            android:id="@+id/tvbalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="30dp"
            android:textColor="@color/gray"
            android:textSize="26sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:gravity="center"
            android:paddingTop="30dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/button_bg"
            android:gravity="center"
            android:text="redeem"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="Enter Code Here"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:text="@string/text1"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:text="@string/text2"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:text="@string/text3"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:text="@string/text4"
            android:textColor="@color/cardview_dark_background"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>