<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReferCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/cardview_light_background">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/imgback"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/icon_back"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/comfortaa_light"
                android:textStyle="bold"
                android:paddingLeft="80dp"
                android:text="Refer and Earn"
                android:textColor="@color/colorsplash"
                android:textSize="24sp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_light_background"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_light_background"
                android:src="@drawable/refer" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Refer &amp; Earn"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="@font/almendra_display" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:text="@string/text1"
                android:textColor="@color/cardview_dark_background"
                android:fontFamily="@font/comfortaa_light"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/text2"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/text3"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:fontFamily="@font/comfortaa_light"
                android:text="@string/text4"
                android:textColor="@color/cardview_dark_background"
                android:textSize="16sp" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="15dp"
                android:text="Your Referal Code is"
                android:fontFamily="@font/comfortaa_light"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvrefercode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:paddingTop="15dp"
                android:textColor="@color/blue"
                android:textSize="28sp"
                android:fontFamily="@font/comfortaa_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnshare"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="140dp"
                android:layout_marginRight="140dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button"
                android:fontFamily="@font/comfortaa_light"
                android:text="Share"
                android:textAllCaps="false"
                android:textColor="@color/colorsplash"
                android:textSize="28sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>